--- a/src/components/OfflineChatbot/styles/markdown.css
+++ b/src/components/OfflineChatbot/styles/markdown.css
@@ -1,16 +1,11 @@
-
-.markdown {
-
-
+/* .markdown {
   code {
     padding: 1em;
   }
 
   pre,
   code {
-    font-size: 1rem;
     border-radius: 0.5rem;
-
     word-break: break-all;
     white-space: pre-wrap;
   }
@@ -26,6 +21,7 @@
 
     background-color: rgba(0, 0, 0, 0.7);
     color: #fff;
+    margin: 0.5em 0;
   }
 }
 
@@ -58,4 +54,4 @@
   p {
     @apply whitespace-pre-wrap break-words;
   }
-}
+} */
